--- a/index.html
+++ b/index.html
@@ -125,18 +125,19 @@
             </div>
         </div>
         <div class="right-panel">
-            <marquee behavior="scroll" direction="up">
-            <p>Latest Updates Released</p>
-            <p>v4.1: Redefined UX</p>
-            <p>v4.0: Redesigned UI</p>
-            <p>v3.2: New Portal launched</p>
-            <p>v3.1: Admin Analytics building started</p>
-            <p>v3.0: Admin Portal Design</p>
-            <p>v2.5: Firebase Link-up</p>
-            <p>v2.2: Voter Homepage</p>
-            <p>v2.1: Administration Portal</p>
-            <p>v2.0: First look of the login and registered page</p>
-            <p>v1.0: Intial planning and first view of the project</p>
+            <marquee onMouseOver="this.stop()" onMouseOut="this.start()" behavior="scroll" direction="up">
+                <p>Latest Released Updates</p>
+                <p><a href="https://manjoydutta.github.io/SVMv4.2">v4.2</a>: Responsive Navigation bar</p>
+                <p><a href="https://manjoydutta.github.io/SVMv4.1">v4.1</a>: Redefined UX</p>
+                <p>v4.0: Redesigned UI</p>
+                <p>v3.2: New Portal launched</p>
+                <p><a href="https://manjoydutta.github.io/SVMv3.1">v3.1</a>: Admin Analytics building started</p>
+                <p><a href="https://manjoydutta.github.io/SVMv3.0">v3.0</a>: Admin Portal Design</p>
+                <p>v2.5: Firebase Link-up</p>
+                <p><a href="https://manjoydutta.github.io/SVMv2.2">v2.2</a>: Voter Homepage</p>
+                <p><a href="https://manjoydutta.github.io/SVMv2.1">v2.1</a>: Administration Portal</p>
+                <p>v2.0: First look of the Login and Register page</p>
+                <p>v1.0: Intial planning and first view of the project</p>
             </marquee>
         </div>
         <script type="module" src="support/script.js"></script>
